--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon ./bin/www",
     "start": "node ./bin/www",
-    "build-react": "echo ---- creating react build --- && cd ../client  && npm install && npm run build && cp -r ./build/* ../server/public/ && cd ..",
+    "build-react": "echo ---- creating react build --- && cd ../Flam-client  && npm install && npm run build && cp -r ./build/* ../Flam-server/public/ && cd .."
   },
   "dependencies": {
     "axios": "^0.21.1",
